--- a/index.html
+++ b/index.html
@@ -261,7 +261,6 @@
           <a href="tel:+420603212893">603&nbsp;212&nbsp;893</a>.
         </p>
 
-        <p class="muted">Raději volat? <a href="tel:+420603212893">603 212 893</a></p>
       </form>
     </section>
 
@@ -294,7 +293,6 @@
         <section aria-labelledby="adresa-title">
           <h2 id="adresa-title">Adresa provozovny</h2>
           <p>Barvířská 128/21, 460 07 Liberec III-Jeřáb</p>
-          <p class="muted">Otevírací doba dle domluvy / výjezdy v regionu Liberec.</p>
         </section>
       </div>
       <p class="footer-bottom">
@@ -369,7 +367,7 @@
 
   function applyScrollPadding(){
     const h = header ? header.offsetHeight : 72;
-    document.documentElement.style.scrollPaddingTop = (h + 8) + 'px';
+    document.documentElement.style.scrollPaddingTop = (h) + 'px';
   }
 
   // inicializace + reakce na změny
