--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
     <section class="hero" aria-labelledby="h1">
       <!-- Pozadí: rotující obrázky -->
       <div class="hero-bg" aria-hidden="true">
-        <img class="hero-slide is-active" src="./img/hero-1.jpg" alt="" width="1920" height="900" loading="eager" decoding="async" fetchpriority="high">
+        <img class="hero-slide is-active" src="./img/hero-3.png" alt="" width="1920" height="900" loading="eager" decoding="async" fetchpriority="high">
         <img class="hero-slide" src="./img/hero-2.jpg" alt="" width="1920" height="900" loading="lazy">
-        <img class="hero-slide" src="./img/hero-3.png" alt="" width="1920" height="900" loading="lazy">
+        <img class="hero-slide" src="./img/hero-1.jpg" alt="" width="1920" height="900" loading="lazy">
         <div class="hero-blur"></div>
         <div class="hero-scrim"></div>
       </div>
