--- a/obchodni-podminky.html
+++ b/obchodni-podminky.html
@@ -112,7 +112,11 @@
 
   <footer role="contentinfo">
     <div class="container">
-      <p class="muted">© 2025 Vladimír Řehák – Plynservis Liberec</p>
+      <p class="footer-bottom">
+        © 2025 Vladimír Řehák – Plynservis Liberec •
+        <a href="./obchodni-podminky.html">Obchodní podmínky</a> •
+        <a href="./gdpr.html">GDPR</a>
+      </p>
     </div>
   </footer>
 </body>
