--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <li class="nav-item"><a href="#sluzby">Nabídka služeb</a></li>
           <li class="nav-item"><a href="#informace">Informace</a></li>
           <li class="nav-item"><a href="#formular">Kontaktní formulář</a></li>
-          <li class="nav-item"><a href="#mapa">Kde působím</a></li>
+          <li class="nav-item"><a href="#mapa">Kde mě najdete</a></li>
         </ul>
       </nav>
 
@@ -96,20 +96,20 @@
       <!-- Obsah nad pozadím -->
       <div class="hero-inner container">
         <h1 id="h1">Servis a revize plynových kotlů v Liberci a okolí</h1>
-        <p class="muted">Rychlé opravy, čištění a pravidelná údržba kotlů. Certifikovaný plynservis technik s praxí.</p>
+        <p class="muted2">Rychle. Spolehlivě. Bez starostí.</p>
 
         <div class="kpi">
           <span class="pill">
             <i class="fa-solid fa-location-crosshairs" aria-hidden="true"></i>
-            &nbsp; Liberec, Vratislavice, Rochlice, Jablonec n. N...
+            &nbsp; Liberec, Jablonec nad Nisou, Vratislavice...
           </span>
           <a class="btn" href="#formular"><i class="fa-solid fa-envelope" aria-hidden="true"></i> Napsat zprávu</a>
         </div>
 
         <p class="hero-text">
+          Jsem certifikovaný servisní technik s mnohaletou praxí.
           Poskytuji servis, opravy, revize a montáže plynových kotlů v Liberci a blízkém okolí
-          (Vratislavice, Rochlice, Jablonec nad Nisou). Pracuji pro domácnosti, byty, rodinné domy i menší firmy.
-          Jsem certifikovaný servisní technik s mnohaletou zkušeností.
+          (Jablonec nad Nisou, Vratislavice, Rochlice..). Spolupracuji s domácnostmi, SVJ i firmami.
         </p>
 
         <a href="#sluzby" class="hero-arrow" aria-label="Posunout na obsah">
@@ -143,19 +143,19 @@
       <div class="grid grid-2" role="list">
         <article class="card" role="listitem">
           <div class="card-head"><h3>Servis plynových kotlů</h3></div>
-          <p>Pravidelný servis, čištění a diagnostika plynových kotlů v Liberci a okolí.</p>
+          <p>Pravidelná údržba a čištění, diagnostika a oprava poruch</p>
         </article>
         <article class="card" role="listitem">
           <div class="card-head"><h3>Revize a kontroly</h3></div>
-          <p>Provádím zákonné revize plynových zařízení, včetně vystavení protokolu.</p>
+          <p>Povinné revize dle zákona, vystavení protokolu</p>
         </article>
         <article class="card" role="listitem">
           <div class="card-head"><h3>Montáž a výměna kotlů</h3></div>
-          <p>Demonáž starého spotřebiče, dodávka a odborná montáž nového plynového kotle.</p>
+          <p>Demontáž stávajících spotřebičů, dodávka a montáž nových</p>
         </article>
         <article class="card" role="listitem">
           <div class="card-head"><h3>Poradenství a prodej</h3></div>
-          <p>Pomohu s výběrem kotle, příslušenství i vhodného řešení pro váš byt či dům.</p>
+          <p>Pomohu s výběrem vhodného kotle nebo příslušenství</p>
         </article>
       </div>
     </section>
@@ -164,8 +164,8 @@
     <section class="section" aria-labelledby="cta">
       <div class="container">
         <div class="cta container">
-          <h2 id="cta">Potřebujete rychlý zásah v Liberci?</h2>
-          <p>Nejrychlejší je zavolat. V naléhavých případech je možný výjezd ještě dnes.</p>
+          <h2 id="cta">Potřebujete rychlý zásah?</h2>
+          <p class="space2">V naléhavých případech je možný výjezd ještě dnes.</p>
           <p>
             <a class="btn" href="tel:+420603212893">
               <i class="fa-solid fa-phone" aria-hidden="true"></i>
@@ -182,24 +182,31 @@
       <h2 id="info-title">Informace</h2>
       <div class="grid grid-2">
         <div class="card">
-          <div class="card-head"><h3>Proč zvolit místní plynservis</h3></div>
-          <p>Rychlý dojezd v rámci Liberce, znalost lokality a dostupnost náhradních dílů pro oblíbené značky.</p>
+          <div class="card-head"><h3>Proč zvolit právě mě?</h3></div>
+          <!-- <p>Rychlý dojezd v rámci Liberce, znalost lokality a dostupnost náhradních dílů pro oblíbené značky.</p> -->
           <ul class="checkcheck">
-            <li><i class="fa-solid fa-circle-check"></i><span>Certifikace a praxe</span></li>
-            <li><i class="fa-solid fa-circle-check"></i><span>Transparentní ceny</span></li>
+            <li><i class="fa-solid fa-circle-check"></i><span>Certifikace</span></li>
+            <li><i class="fa-solid fa-circle-check"></i><span>Mnoholetá praxe</span></li>
             <li><i class="fa-solid fa-circle-check"></i><span>Záruka na práci</span></li>
+            <li><i class="fa-solid fa-circle-check"></i><span>Poradenství</span></li>
+            <li><i class="fa-solid fa-circle-check"></i><span>Transparentnost</span></li>
+
           </ul>
         </div>
         <div class="card">
           <div class="card-head"><h3>Časté dotazy</h3></div>
           <div>
             <details>
-              <summary>Jak často dělat servis kotle?</summary>
+              <summary>Které značky kotlů servisujete?</summary>
+              <p>Specializuji se na plynová zařízení značek Vaillant, Protherm a Junkers.</p>
+            </details>
+            <details>
+              <summary>Jak často provádět servis kotle?</summary>
               <p>Jednou ročně před topnou sezónou; u revizí dle zákonných požadavků a typu zařízení.</p>
             </details>
             <details>
-              <summary>Děláte revizní protokoly?</summary>
-              <p>Ano, provádím zákonné revize plynových zařízení a vystavuji protokol.</p>
+              <summary>Vystavujete revizní protokoly?</summary>
+              <p>Ano, zajišťuji zákonné revize plynových zařízení a vystavuji protokoly.</p>
             </details>
           </div>
         </div>
@@ -266,8 +273,6 @@
 
     <!-- MAPA -->
     <section id="mapa" class="section container" aria-labelledby="mapa-title">
-      <h2 id="mapa-title">Kde působím</h2>
-      <p class="muted">Působím na území města Liberec a přijíždím také do blízkých obcí v okolí.</p>
       <div class="map-wrap" id="map-placeholder">
         <div class="map-skel"><span>Načítám mapu…</span></div>
       </div>
