--- a/gdpr.html
+++ b/gdpr.html
@@ -58,7 +58,7 @@
 
       <h2>Správce</h2>
       <p><strong>Vladimír Řehák – Plynservis Liberec</strong>, IČO: 65832800, Barvířská 128/21, 460 07 Liberec III-Jeřáb.  
-        Kontakt: <a href="mailto:rehakson@seznam.cz">rehakson@seznam.cz</a>, tel. <a href="tel:+420603212893">603&nbsp;212&nbsp;893</a>.
+        Kontakt: <a href="mailto:info@plynservisliberec.cz">info@plynservisliberec.cz</a>, tel. <a href="tel:+420603212893">603&nbsp;212&nbsp;893</a>.
       </p>
 
       <h2>Jaké údaje zpracováváme</h2>
@@ -101,7 +101,7 @@
       <p>Web používá pouze technické cookies nezbytné pro funkci stránek. Marketingová/analytická cookies nasazujeme pouze s vaším souhlasem (pokud budou v budoucnu nasazena měřicí skripta). Nastavení můžete změnit v cookie liště.</p>
 
       <h2>Kontakty pro uplatnění práv</h2>
-      <p>E-mail: <a href="mailto:rehakson@seznam.cz">rehakson@seznam.cz</a> • Telefon: <a href="tel:+420603212893">603&nbsp;212&nbsp;893</a></p>
+      <p>E-mail: <a href="mailto:info@plynservisliberec.cz">info@plynservisliberec.cz</a> • Telefon: <a href="tel:+420603212893">603&nbsp;212&nbsp;893</a></p>
 
       <p><a class="btn" href="./"><i class="fa-solid fa-arrow-left" aria-hidden="true"></i> Zpět na hlavní stránku</a></p>
     </section>
