--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <link rel="manifest" href="./img/favicons/site.webmanifest">
 
   <!-- Canonical (GH Pages verze – až bude doména, přepiš) -->
-  <link rel="canonical" href="https://mirstep019.github.io/PlynServis/">
+  <link rel="canonical" href="https://plynservisliberec.cz/">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Plynservis Liberec – servis a revize plynových kotlů">
   <meta property="og:description" content="Rychlý servis, revize a montáže plynových kotlů v Liberci a okolí. Certifikovaný technik, revizní protokoly.">
-  <meta property="og:url" content="https://mirstep019.github.io/PlynServis/">
-  <meta property="og:image" content="https://mirstep019.github.io/PlynServis/img/og-preview.jpg">
+  <meta property="og:url" content="https://plynservisliberec.cz/">
+  <meta property="og:image" content="https://plynservisliberec.cz/img/og-preview.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:locale" content="cs_CZ">
@@ -217,7 +217,7 @@
     <section id="formular" class="section container" aria-labelledby="form-title">
       <h2 id="form-title">Kontaktní formulář</h2>
 
-      <form id="contact-form" method="POST" action="https://formsubmit.co/0b9a6f8ec68bf7654cbe689e2060df14" aria-describedby="gdpr-note" novalidate>
+      <form id="contact-form" method="POST" action="https://formsubmit.co/info@plynservisliberec.cz" aria-describedby="gdpr-note" novalidate>
         <!-- HONEYPOT proti spamu -->
         <input type="text" name="website" tabindex="-1" autocomplete="off" class="hp" aria-hidden="true">
 
@@ -292,7 +292,7 @@
               <span class="sr-only">Telefon:</span>
               603&nbsp;212&nbsp;893
             </a><br>
-            E-mail: <a href="mailto:rehakson@seznam.cz">rehakson@seznam.cz</a>
+            E-mail: <a href="mailto:info@plynservisliberec.cz">info@plynservisliberec.cz</a>
           </address>
         </section>
         <section aria-labelledby="adresa-title">
@@ -315,7 +315,7 @@
 
 
   <!-- JSON-LD: LocalBusiness + FAQ -->
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"HVACBusiness","name":"Plynservis Liberec – Vladimír Řehák","image":"https://mirstep019.github.io/PlynServis/og-preview.jpg","url":"https://mirstep019.github.io/PlynServis/","telephone":"+420603212893","email":"rehakson@seznam.cz","address":{"@type":"PostalAddress","streetAddress":"Barvířská 128/21","addressLocality":"Liberec","postalCode":"46007","addressCountry":"CZ"},"areaServed":["Liberec","Vratislavice","Rochlice","Jablonec nad Nisou"],"openingHoursSpecification":[{"@type":"OpeningHoursSpecification","dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday"],"opens":"08:00","closes":"18:00"}],"priceRange":"CZK","makesOffer":[{"@type":"Offer","itemOffered":{"@type":"Service","name":"Servis plynových kotlů","areaServed":"Liberec"},"priceCurrency":"CZK"},{"@type":"Offer","itemOffered":{"@type":"Service","name":"Revize plynových zařízení s protokolem","areaServed":"Liberec"},"priceCurrency":"CZK"},{"@type":"Offer","itemOffered":{"@type":"Service","name":"Montáž a výměna kotlů","areaServed":"Liberec"},"priceCurrency":"CZK"}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"HVACBusiness","name":"Plynservis Liberec – Vladimír Řehák","image":"https://plynservisliberec.cz/og-preview.jpg","url":"https://plynservisliberec.cz/","telephone":"+420603212893","email":"info@plynservisliberec.cz","address":{"@type":"PostalAddress","streetAddress":"Barvířská 128/21","addressLocality":"Liberec","postalCode":"46007","addressCountry":"CZ"},"areaServed":["Liberec","Vratislavice","Rochlice","Jablonec nad Nisou"],"openingHoursSpecification":[{"@type":"OpeningHoursSpecification","dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday"],"opens":"08:00","closes":"18:00"}],"priceRange":"CZK","makesOffer":[{"@type":"Offer","itemOffered":{"@type":"Service","name":"Servis plynových kotlů","areaServed":"Liberec"},"priceCurrency":"CZK"},{"@type":"Offer","itemOffered":{"@type":"Service","name":"Revize plynových zařízení s protokolem","areaServed":"Liberec"},"priceCurrency":"CZK"},{"@type":"Offer","itemOffered":{"@type":"Service","name":"Montáž a výměna kotlů","areaServed":"Liberec"},"priceCurrency":"CZK"}]}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"Jak často dělat servis kotle?","acceptedAnswer":{"@type":"Answer","text":"Doporučujeme jednou ročně před topnou sezónou. U revizí postupujte podle zákonných požadavků a typu zařízení."}},{"@type":"Question","name":"Děláte revizní protokoly?","acceptedAnswer":{"@type":"Answer","text":"Ano, provádíme zákonné revize plynových zařízení a vystavujeme protokol."}}]}</script>
 <script>
     const btn = document.querySelector('.nav-toggle');
