--- a/obchodni-podminky.html
+++ b/obchodni-podminky.html
@@ -59,7 +59,7 @@
       <h2>1. Identifikace dodavatele</h2>
       <p><strong>Vladimír Řehák – Plynservis Liberec</strong><br>
         IČO: 65832800 • Barvířská 128/21, 460 07 Liberec III-Jeřáb<br>
-        Tel: <a href="tel:+420603212893">603&nbsp;212&nbsp;893</a> • E-mail: <a href="mailto:rehakson@seznam.cz">rehakson@seznam.cz</a>
+        Tel: <a href="tel:+420603212893">603&nbsp;212&nbsp;893</a> • E-mail: <a href="mailto:info@plynservisliberec.cz">info@plynservisliberec.cz</a>
       </p>
 
       <h2>2. Předmět a rozsah služeb</h2>
@@ -86,7 +86,7 @@
       <h2>6. Záruka a reklamace</h2>
       <ul>
         <li>Na provedené práce poskytujeme přiměřenou záruku dle povahy zásahu. Na opotřebitelné díly se záruka může vztahovat omezeně dle výrobce.</li>
-        <li>Reklamaci uplatněte bez zbytečného odkladu na <a href="mailto:rehakson@seznam.cz">rehakson@seznam.cz</a> nebo tel. <a href="tel:+420603212893">603&nbsp;212&nbsp;893</a>. Popište závadu, termín zásahu a uveďte kontakty.</li>
+        <li>Reklamaci uplatněte bez zbytečného odkladu na <a href="mailto:info@plynservisliberec.cz">info@plynservisliberec.cz</a> nebo tel. <a href="tel:+420603212893">603&nbsp;212&nbsp;893</a>. Popište závadu, termín zásahu a uveďte kontakty.</li>
       </ul>
 
       <h2>7. Odpovědnost</h2>
