--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <section id="formular" class="section container" aria-labelledby="form-title">
       <h2 id="form-title">Kontaktní formulář</h2>
 
-      <form id="contact-form" method="POST" action="https://formsubmit.co/info@plynservisliberec.cz" aria-describedby="gdpr-note" novalidate>
+      <form id="contact-form" method="POST" action="https://formsubmit.co/9e950ab0d57c853a32300fcda3b5e98c" aria-describedby="gdpr-note" novalidate>
         <!-- HONEYPOT proti spamu -->
         <input type="text" name="website" tabindex="-1" autocomplete="off" class="hp" aria-hidden="true">
 
