--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
       <form id="contact-form" method="POST" action="https://formsubmit.co/9e950ab0d57c853a32300fcda3b5e98c" aria-describedby="gdpr-note" novalidate>
         <!-- HONEYPOT proti spamu -->
-        <input type="text" name="website" tabindex="-1" autocomplete="off" class="hp" aria-hidden="true">
+        <!-- <input type="text" name="website" tabindex="-1" autocomplete="off" class="hp" aria-hidden="true"> -->
 
         <!-- FormSubmit hidden -->
         <input type="text" name="_honey" style="display:none">
