--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
         </div>
 
         <p class="hero-text">
-          Jsem certifikovaný servisní technik s mnohaletou praxí.
-          Poskytuji servis, opravy, revize a montáže plynových kotlů v Liberci a blízkém okolí
+          Jsem certifikovaný servisní technik s dlouholetou praxí.
+          Poskytuji servis, opravy, revize a montáže plynových kotlů v Liberci a okolí
           (Jablonec nad Nisou, Vratislavice, Rochlice..). Spolupracuji s domácnostmi, SVJ i firmami.
         </p>
 
@@ -186,7 +186,7 @@
           <!-- <p>Rychlý dojezd v rámci Liberce, znalost lokality a dostupnost náhradních dílů pro oblíbené značky.</p> -->
           <ul class="checkcheck">
             <li><i class="fa-solid fa-circle-check"></i><span>Certifikace</span></li>
-            <li><i class="fa-solid fa-circle-check"></i><span>Mnoholetá praxe</span></li>
+            <li><i class="fa-solid fa-circle-check"></i><span>Dlouholetá praxe</span></li>
             <li><i class="fa-solid fa-circle-check"></i><span>Záruka na práci</span></li>
             <li><i class="fa-solid fa-circle-check"></i><span>Poradenství</span></li>
             <li><i class="fa-solid fa-circle-check"></i><span>Transparentnost</span></li>
@@ -206,7 +206,7 @@
             </details>
             <details>
               <summary>Vystavujete revizní protokoly?</summary>
-              <p>Ano, zajišťuji zákonné revize plynových zařízení a vystavuji protokoly.</p>
+              <p>Ano, zajišťuji zákonné revize plynových zařízení a vystavuji k nim protokoly.</p>
             </details>
           </div>
         </div>
@@ -262,8 +262,8 @@
         <button class="btns space" type="submit">Odeslat</button>
 
         <!-- hlášky -->
-        <p id="form-success" class="muted" style="display:none;margin-top:10px" aria-live="polite">✅ Děkujeme, zpráva byla úspěšně odeslána.</p>
-        <p id="form-error" class="muted" style="display:none;margin-top:10px;color:#b00020" aria-live="assertive">
+        <p id="form-success" class="muted" style="display:none;margin-top:10px;font-size: 1.1rem; font-weight: 600;" aria-live="polite">✅ Děkujeme, zpráva byla úspěšně odeslána.</p>
+        <p id="form-error" class="muted" style="display:none;margin-top:10px;color:#b00020; font-size: 1.1rem; font-weight: 600;" aria-live="assertive">
           ❌ Něco se pokazilo. Zkuste to prosím znovu nebo volejte
           <a href="tel:+420603212893">603&nbsp;212&nbsp;893</a>.
         </p>
